--- a/bio/index.pug
+++ b/bio/index.pug
@@ -1,6 +1,9 @@
 extends ../pug/_main_template.pug
 block title
   title Emily Hansel | Bio
+  link(rel="shortcut icon", href="../assets/img/favicon.ico")
+  link(rel="icon", href="../assets/img/favicon.ico", type="image/x-icon")
+  link(rel="stylesheet", href="../assets/css/index.css")
 block content
   .home-button 
     a(href="/" alt="Emily") E  
@@ -36,3 +39,4 @@ block content
         held various other leadership positions in the USF community. <span class="bio-highlight">Emily</span> is on her way to becoming a 
         King O'Neal Scholar and she will graduate in May 2016 as a Provost's Scholar with a BFA in Dance 
         Performance and an honors degree.
+block scripts        
