--- a/assets/css/bio.css
+++ b/assets/css/bio.css
@@ -8,198 +8,93 @@
     opacity: 0; }
   100% {
     opacity: 1; } }
-@-webkit-keyframes fadeIn {
-  0%, 7.5% {
-    background-image: none;
-    visibility: visible;
-    left: -86.92308%; }
-  7.5%, 10.49% {
-    background-image: url(../img/dancing/1.png);
-    visibility: visible;
-    left: -86.53846%; }
-  10.5%, 14.99% {
-    background-image: url(../img/dancing/1.png);
-    visibility: hidden; }
-  15%, 17.99% {
-    background-image: url(../img/dancing/2.png);
-    visibility: visible;
-    left: -73.07692%; }
-  18%, 22.49% {
-    background-image: url(../img/dancing/2.png);
-    visibility: hidden; }
-  22.5%, 25.49% {
-    background-image: url(../img/dancing/3.png);
-    visibility: visible;
-    left: -59.61538%; }
-  25.5%, 29.99% {
-    background-image: url(../img/dancing/3.png);
-    visibility: hidden; }
-  30%, 32.99% {
-    background-image: url(../img/dancing/4.png);
-    visibility: visible;
-    left: -46.15385%; }
-  33%, 37.49% {
-    background-image: url(../img/dancing/4.png);
-    visibility: hidden; }
-  37.5%, 40.49% {
-    background-image: url(../img/dancing/5.png);
-    visibility: visible;
-    left: -32.69231%; }
-  40.5%, 44.99% {
-    background-image: url(../img/dancing/5.png);
-    visibility: hidden; }
-  45%, 47.99% {
-    background-image: url(../img/dancing/6.png);
-    visibility: visible;
-    left: -19.23077%; }
-  48%, 52.49% {
-    background-image: url(../img/dancing/6.png);
-    visibility: hidden; }
-  52.5%, 55.49% {
-    background-image: url(../img/dancing/7.png);
-    visibility: visible;
-    left: -5.76923%; }
-  55.5%, 59.99% {
-    background-image: url(../img/dancing/7.png);
-    visibility: hidden; }
-  60%, 62.99% {
-    background-image: url(../img/dancing/8.png);
-    visibility: visible;
-    left: 7.69231%; }
-  63%, 67.49% {
-    background-image: url(../img/dancing/8.png);
-    visibility: hidden; }
-  67.5%, 70.49% {
-    background-image: url(../img/dancing/9.png);
-    visibility: visible;
-    left: 21.15385%; }
-  70.5%, 74.99% {
-    background-image: url(../img/dancing/9.png);
-    visibility: hidden; }
-  75%, 77.99% {
-    background-image: url(../img/dancing/10.png);
-    visibility: visible;
-    left: 34.61538%; }
-  78%, 82.49% {
-    background-image: url(../img/dancing/10.png);
-    visibility: hidden; }
-  82.5%, 85.49% {
-    background-image: url(../img/dancing/11.png);
-    visibility: visible;
-    left: 48.07692%; }
-  85.5%, 89.99% {
-    background-image: url(../img/dancing/11.png);
-    visibility: hidden; }
-  90%, 92.99% {
-    background-image: url(../img/dancing/12.png);
-    visibility: visible;
-    left: 61.53846%; }
-  93%, 97.49% {
-    background-image: url(../img/dancing/12.png);
-    visibility: hidden; }
-  97.5%, 100% {
-    left: 75%;
-    visibility: visible;
-    background-image: url(../img/dancing/13.png); } }
 @keyframes dance {
-  0%, 7.5% {
+  0%, 8.99% {
+    background-image: url(../img/dancing/1.png);
+    visibility: hidden;
+    left: -84.09091%; }
+  9%, 11.99% {
+    background-image: url(../img/dancing/1.png);
+    visibility: visible;
+    left: -84.09091%; }
+  12%, 16.49% {
     background-image: none;
-    visibility: visible;
-    left: -86.92308%; }
-  7.5%, 10.49% {
-    background-image: url(../img/dancing/1.png);
-    visibility: visible;
-    left: -86.53846%; }
-  10.5%, 14.99% {
-    background-image: url(../img/dancing/1.png);
     visibility: hidden; }
-  15%, 17.99% {
+  18%, 20.99% {
     background-image: url(../img/dancing/2.png);
     visibility: visible;
-    left: -73.07692%; }
-  18%, 22.49% {
-    background-image: url(../img/dancing/2.png);
+    left: -68.18182%; }
+  21%, 25.49% {
+    background-image: none;
     visibility: hidden; }
-  22.5%, 25.49% {
+  27%, 29.99% {
     background-image: url(../img/dancing/3.png);
     visibility: visible;
-    left: -59.61538%; }
-  25.5%, 29.99% {
-    background-image: url(../img/dancing/3.png);
+    left: -52.27273%; }
+  30%, 34.49% {
+    background-image: none;
     visibility: hidden; }
-  30%, 32.99% {
+  36%, 38.99% {
     background-image: url(../img/dancing/4.png);
     visibility: visible;
-    left: -46.15385%; }
-  33%, 37.49% {
-    background-image: url(../img/dancing/4.png);
-    visibility: hidden; }
-  37.5%, 40.49% {
-    background-image: url(../img/dancing/5.png);
-    visibility: visible;
-    left: -32.69231%; }
-  40.5%, 44.99% {
-    background-image: url(../img/dancing/5.png);
+    left: -36.36364%; }
+  39%, 43.49% {
+    background-image: none;
     visibility: hidden; }
   45%, 47.99% {
-    background-image: url(../img/dancing/6.png);
+    background-image: url(../img/dancing/5.png);
     visibility: visible;
-    left: -19.23077%; }
+    left: -20.45455%; }
   48%, 52.49% {
+    background-image: none;
+    visibility: hidden; }
+  54%, 56.99% {
     background-image: url(../img/dancing/6.png);
+    visibility: visible;
+    left: -4.54545%; }
+  57%, 61.49% {
+    background-image: none;
     visibility: hidden; }
-  52.5%, 55.49% {
+  63%, 65.99% {
     background-image: url(../img/dancing/7.png);
     visibility: visible;
-    left: -5.76923%; }
-  55.5%, 59.99% {
-    background-image: url(../img/dancing/7.png);
+    left: 11.36364%; }
+  66%, 70.49% {
+    background-image: none;
     visibility: hidden; }
-  60%, 62.99% {
+  72%, 74.99% {
     background-image: url(../img/dancing/8.png);
     visibility: visible;
-    left: 7.69231%; }
-  63%, 67.49% {
-    background-image: url(../img/dancing/8.png);
+    left: 27.27273%; }
+  75%, 79.49% {
+    background-image: none;
     visibility: hidden; }
-  67.5%, 70.49% {
+  81%, 83.99% {
     background-image: url(../img/dancing/9.png);
     visibility: visible;
-    left: 21.15385%; }
-  70.5%, 74.99% {
-    background-image: url(../img/dancing/9.png);
-    visibility: hidden; }
-  75%, 77.99% {
-    background-image: url(../img/dancing/10.png);
-    visibility: visible;
-    left: 34.61538%; }
-  78%, 82.49% {
-    background-image: url(../img/dancing/10.png);
-    visibility: hidden; }
-  82.5%, 85.49% {
-    background-image: url(../img/dancing/11.png);
-    visibility: visible;
-    left: 48.07692%; }
-  85.5%, 89.99% {
-    background-image: url(../img/dancing/11.png);
+    left: 43.18182%; }
+  84%, 88.49% {
+    background-image: none;
     visibility: hidden; }
   90%, 92.99% {
-    background-image: url(../img/dancing/12.png);
+    background-image: url(../img/dancing/10.png);
     visibility: visible;
-    left: 61.53846%; }
+    left: 59.09091%; }
   93%, 97.49% {
-    background-image: url(../img/dancing/12.png);
+    background-image: none;
     visibility: hidden; }
   97.5%, 100% {
     left: 75%;
     visibility: visible;
-    background-image: url(../img/dancing/13.png); } }
+    background-image: url(../img/dancing/11.png); } }
 .body-container.bio {
   top: 0px;
   width: 60%;
   margin-left: -30%;
   position: relative; }
   .body-container.bio .bio-container {
+    border: 10px solid white;
+    padding: 20px;
     position: absolute;
     margin-top: 50px; }
     .body-container.bio .bio-container h3 {
