--- a/sass/bio.sass
+++ b/sass/bio.sass
@@ -5,6 +5,8 @@
   margin-left: -30%
   position: relative
   .bio-container
+    border: 10px solid white
+    padding: 20px 
     position: absolute
     margin-top: 50px
     h3
