--- a/bio/index.pug
+++ b/bio/index.pug
@@ -11,8 +11,9 @@ block content
   .body-container.bio
     .bio-container
       h3 Bio
-        
+      .headshot
       p.
+        <img src="../assets/img/headshot.png" alt="headshot">
         <em>Emily Hansel</em> began her dance training in Rochester, 
         Minnesota at Allegro School of Dance and the Minnesota Youth Ballet Academy. She performed 
         with Minneapolis’s Metropolitan Ballet, danced in 
