--- a/sass/bio.sass
+++ b/sass/bio.sass
@@ -6,18 +6,24 @@
   position: relative
   .bio-container
     border: 10px solid white
-    padding: 20px 
+    padding: 20px
     position: absolute
     margin-top: 50px
     h3
       text-align: left
       padding: 5px 0px
+
+    img
+      height: 135px
+      float: left
+      margin: 0px 15px 0px 0px
     p
       display: inline-block
+      word-wrap: break-word
       color: white
       text-align: justify
       opacity: 0
-      @for $i from 1 through 5
+      @for $i from 1 through 6
         &:nth-child(#{$i})
           +fade(300ms)
           +delay(#{$i * 150}ms)
