--- a/bio/index.pug
+++ b/bio/index.pug
@@ -7,7 +7,7 @@ block title
 block content
   .home-button
     a(href="/" alt="Emily") E
-      img(src="../assets/img/dancing/crop/1.png")
+      img.flip(src="../assets/img/dancing/crop/1.png")
   .body-container.bio
     .bio-container
       h3 Bio
