--- a/bio/index.pug
+++ b/bio/index.pug
@@ -41,4 +41,5 @@ block content
         held various other leadership positions in the USF community. Emily is on her way to becoming a 
         King O'Neal Scholar and she will graduate in May 2016 as a Provost's Scholar with a BFA in Dance 
         Performance and an honors degree.
-block scripts        
+block scripts
+  script sessionStorage.seen = true;    
