--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -30,3 +30,9 @@
     .bio-highlight
       color: $accent
       font-weight: 700
+
+@media screen and (max-width: 500px)
+  .body-container.bio
+    left: 60%
+    .bio-container p
+      text-align: left
