--- a/bio/index.pug
+++ b/bio/index.pug
@@ -12,32 +12,44 @@ block content
       .headshot
       p.
         <img src="../assets/img/headshot.png" alt="headshot">
-        <em>Emily Hansel</em> began her dance training in Rochester, 
-        Minnesota at Allegro School of Dance and the Minnesota Youth Ballet Academy. She performed 
-        with Minneapolis’s Metropolitan Ballet, danced in 
-        several projects at the Ritz Theater in Minneapolis, and founded the Summer Choreography Workshop in Rochester. 
-        She attended the summer intensives of Alonzo King LINES Ballet, the San Francisco Conservatory of Dance, and the 
-        American Ballet Theatre. In 2012, at age 17, Emily 
-        was awarded the Homer Avila Scholarship by Alonzo King LINES Ballet.
+        Emily Hansel began her dance training in Rochester, Minnesota at 
+        Allegro School of Dance and Minnesota Youth Ballet Academy. She 
+        performed with Minneapolis’s Metropolitan Ballet, danced in several 
+        projects at the Ritz Theater in Minneapolis, and founded the Summer 
+        Choreography Workshop in Rochester. She attended the summer 
+        intensives of Alonzo King LINES Ballet, the San Francisco Conservatory 
+        of Dance, and American Ballet Theatre. In 2012, at age 17, Emily 
+        received the Homer Avila Award from Alonzo King LINES Ballet.
       p.
-        In 2014, Emily attended the American Dance Festival School where she performed in the original work of 
-        choreographer Carl Flink. In 2015, Emily attended the University of South Florida’s Dance in Paris program 
-        where she studied under dancers from companies such as Tanztheater Wuppertal (Pina Bausch), 
-        Chunky Move (Anouk van Dijk), and Nederlands Dans Theater.
+        Emily received her BFA in Dance Performance from the University of South Florida, 
+        where she established herself as a dynamic performer, choreographer, 
+        scholar, and leader. She performed in works by Ohad Naharin, Alonzo 
+        King, Robert Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, 
+        Andrew Carroll, and Jeanne Travers and, in October 2015, she 
+        performed at the International Creative Dance Seminar at the 
+        Beijing Dance Academy in Beijing, China. Also in 2015, Emily 
+        attended USF’s Dance in Paris Program where she studied under 
+        dancers from companies such as Tanztheater Wuppertal, Chunky Move, 
+        and Nederlands Dans Theater. In 2014, Emily attended the American 
+        Dance Festival School where she worked with choreographer Carl Flink 
+        and performed in his ADF-commissioned piece, <i>Unkindness of Ravens</i>.
       p.
-        Currently in her third year of study at the University of South Florida, Emily has established herself 
-        as a dynamic performer, choreographer, scholar, and leader. She has performed in works by Ohad Naharin, 
-        Alonzo King, Robert Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, Andrew Carroll, and Jeanne 
-        Travers and, in October 2015, she performed at the International Creative Dance Seminar in Beijing, China. 
-        Emily’s choreography has been presented multiple times in USF’s annual Student Dance Production among other 
-        shows. Emily is currently conducting research for her Honors Thesis, “The Representation of Ideas by Words 
-        and Art,” which will culminate in the choreography and performance of a solo in April 2015.
+        Emily’s choreography has been presented several times in USF’s annual 
+        Student Dance Production among other shows at the University and 
+        throughout Florida. Her work, No Reason, was selected to be 
+        presented at the Southeast ACDA Conference in March 2016. Emily 
+        is currently seeking out new venues where she can share her most 
+        recent project, <i>untitled_37.txt</i>.
       p.
-        Emily is the President of USF’s Student Dance Production Board, which entails overseeing every aspect of 
-        production for the annual student-run and student-choreographed concert among other managerial and 
-        organizational responsibilities. She has worked on the TEDxUSF Affairs Team for two years and has 
-        held various other leadership positions in the USF community. Emily is on her way to becoming a 
-        King O'Neal Scholar and she will graduate in May 2016 as a Provost's Scholar with a BFA in Dance 
-        Performance and an honors degree.
+        In addition to performance and choreography, Emily continually 
+        finds herself drawn to jobs that revolve around administration 
+        and operations. She served as the President of USF’s Student Dance 
+        Production Board, which involved overseeing every aspect of production 
+        for the annual student-run and student-choreographed concert among 
+        other managerial and organizational responsibilities. She worked 
+        on the TEDxUSF Affairs Team for two years and held various other 
+        leadership positions in the USF community. Emily graduated summa 
+        cum laude in May 2016 as a King O'Neal Scholar and a Provost's Scholar 
+        with a BFA in Dance Performance and an Honors College Degree.
 block scripts
   script sessionStorage.seen = true;    
