--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -1,4 +1,14 @@
 @import animations, palette
+
+.rightImage
+  position: fixed
+  z-index: -1
+  width: 40%
+  height: 40%
+  bottom: 200px
+  right: 15%
+  right: 15vw
+
 .body-container.bio
   top: 0px
   width: 60%
@@ -9,6 +19,8 @@
     padding: 20px
     position: absolute
     margin-top: 50px
+    margin-bottom: 50px
+    
     h3
       text-align: left
       padding: 5px 0px
