--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -21,7 +21,13 @@
     margin-top: 50px
     margin-bottom: 50px
 
-    h3
+    h1
+      text-align: left
+      font-size: 40px
+      font-weight: 100
+      text-transform: uppercase
+      color: white
+      margin: 0 auto
       text-align: left
       padding: 5px 0px
 
