--- a/bio/index.pug
+++ b/bio/index.pug
@@ -51,5 +51,6 @@ block content
         leadership positions in the USF community. Emily graduated summa 
         cum laude in May 2016 as a King O'Neal Scholar and a Provost's Scholar 
         with a BFA in Dance Performance and an Honors College Degree.
+    include ../pug/_footer.pug
 block scripts
   script sessionStorage.seen = true;    
