--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -10,16 +10,15 @@
   right: 15vw
 
 .body-container.bio
-  top: 0px
+  top: 50px
+  position: relative
   width: 60%
   margin-left: -30%
-  position: relative
+  transform: none
   .bio-container
     border: 10px solid white
     padding: 20px
-    position: absolute
-    margin-top: 50px
-    margin-bottom: 50px
+    margin-bottom: 40px
 
     h1
       text-align: left
