--- a/bio/index.pug
+++ b/bio/index.pug
@@ -9,48 +9,7 @@ block content
   .body-container.bio
     .bio-container
       h1 Bio
-      .headshot
-      p.
-        <img src="../assets/img/headshot.png" alt="headshot">
-        Emily Hansel began her dance training in Rochester, Minnesota at 
-        Allegro School of Dance and Minnesota Youth Ballet Academy. She 
-        performed with Minneapolis’s Metropolitan Ballet, danced in several 
-        projects at the Ritz Theater in Minneapolis, and founded the Summer 
-        Choreography Workshop in Rochester. She attended the summer 
-        intensives of Alonzo King LINES Ballet, the San Francisco Conservatory 
-        of Dance, and American Ballet Theatre. In 2012, at age 17, Emily 
-        received the Homer Avila Award from Alonzo King LINES Ballet.
-      p.
-        Emily received her BFA in Dance Performance from the University of South Florida, 
-        where she established herself as a dynamic performer, choreographer, 
-        scholar, and leader. She performed in works by Ohad Naharin, Alonzo 
-        King, Robert Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, 
-        Andrew Carroll, and Jeanne Travers and, in October 2015, she 
-        performed at the International Creative Dance Seminar at the 
-        Beijing Dance Academy in Beijing, China. Also in 2015, Emily 
-        attended USF’s Dance in Paris Program where she studied under 
-        dancers from companies such as Tanztheater Wuppertal, Chunky Move, 
-        and Nederlands Dans Theater. In 2014, Emily attended the American 
-        Dance Festival School where she worked with choreographer Carl Flink 
-        and performed in his ADF-commissioned piece, <i>Unkindness of Ravens</i>.
-      p.
-        Emily’s choreography has been presented several times in USF’s annual 
-        Student Dance Production among other shows at the University and 
-        throughout Florida. Her work, <i>No Reason</i>, was selected to be 
-        presented at the Southeast ACDA Conference in March 2016. Emily 
-        is currently seeking out new venues where she can share her most 
-        recent project, <i>untitled_37.txt</i>.
-      p.
-        In addition to performance and choreography, Emily continually 
-        finds herself drawn to jobs that revolve around administration 
-        and operations. She served as the President of USF’s Student Dance 
-        Production Board, which involved overseeing every aspect of production 
-        for the annual student-run and student-choreographed concert among 
-        other managerial and organizational responsibilities. She worked 
-        on the TEDxUSF Affairs Team for two years and held various other 
-        leadership positions in the USF community. Emily graduated summa 
-        cum laude in May 2016 as a King O'Neal Scholar and a Provost's Scholar 
-        with a BFA in Dance Performance and an Honors College Degree.
+      include:markdown-it ./bio.md
     include ../pug/_footer.pug
 block scripts
-  script sessionStorage.seen = true;    
+  script sessionStorage.seen = true;
