--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -40,6 +40,7 @@
       color: white
       text-align: justify
       opacity: 0
+      margin: 0 0 10px
       @for $i from 1 through 7
         &:nth-child(#{$i})
           +fade(300ms)
@@ -47,6 +48,9 @@
     a
       color: $accent
       font-weight: 700
+
+.statement-container p:last-of-type
+  text-align: center
 
 @media screen and (max-width: 500px)
   .body-container.bio
