--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -49,6 +49,9 @@
       color: $accent
       font-weight: 700
 
+      &:hover
+        text-decoration: underline
+
 .statement-container p:last-of-type
   text-align: center
 
