--- a/bio/index.pug
+++ b/bio/index.pug
@@ -19,7 +19,7 @@ block content
         <a href="https://www.marikabrussel.com/" target="_blank">Marika Brussel</a>,
         Brannigan Dance Works, SOULSKIN Dance, and as a guest
         with Robert Moses' Kin. Emily's choreography has been presented at the
-        Joe Goode Annex, Little Boxes Theater, SAFEhouse for the Performing Arts,
+        Joe Goode Annex, CounterPulse, Little Boxes Theater, SAFEhouse for the Performing Arts,
         LEVYsalon, and various venues in Tampa, West Palm Beach, Atlanta, and Paris (Fr.).
       p.
         Emily has trained for 12 years in ballet, modern, jazz, tap, contact improvisation,
