--- a/bio/index.pug
+++ b/bio/index.pug
@@ -20,7 +20,7 @@ block content
         Brannigan Dance Works, SOULSKIN Dance, and as a guest
         with Robert Moses' Kin. Emily's choreography has been presented at the
         Joe Goode Annex, CounterPulse, Little Boxes Theater, SAFEhouse for the Performing Arts,
-        LEVYsalon, and various venues in Tampa, West Palm Beach, Atlanta, and Paris (Fr.).
+        LEVYsalon, and various venues in Tampa, West Palm Beach, and Atlanta.
       p.
         Emily has trained for 12 years in ballet, modern, jazz, tap, contact improvisation,
         Gaga, and Countertechnique. She began her dance training in Rochester,
