--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -34,6 +34,7 @@
       height: 150px
       float: left
       margin: 0px 15px 0px 0px
+      border-radius: 4px
     p
       display: inline-block
       word-wrap: break-word
