--- a/bio/index.pug
+++ b/bio/index.pug
@@ -12,44 +12,45 @@ block content
       p.
         <img src="../assets/img/headshot-2.jpg" height="200" alt="Emily Hansel"> Emily Hansel
         is a San Francisco-based dancer and choreographer.
-        Originally from Rochester, Minnesota, she received her BFA in Dance
-        from the University of South Florida in 2016. Since then, Emily
-        has performed with <a href="http://theanataproject.org/" target="_blank">The Anata Project</a>,
-        <a href="http://mfdpsf.org/" target="_blank">Mark Foehringer Dance Project</a>,
-        <a href="https://www.marikabrussel.com/" target="_blank">Marika Brussel</a>,
-        Brannigan Dance Works, SOULSKIN Dance, and as a guest
-        with Robert Moses' Kin. Emily's choreography has been presented at the
-        Joe Goode Annex, CounterPulse, Little Boxes Theater, SAFEhouse for the Performing Arts,
-        LEVYsalon, and various venues in Tampa, West Palm Beach, and Atlanta.
+        <br />
+        <br />
+        Originally from Rochester, Minnesota, Emily began her dance training
+        at Allegro School of Dance and Minnesota Youth Ballet Academy.
+        This training was augmented by the summer intensives of Alonzo
+        King LINES Ballet, the San Francisco Conservatory of Dance,
+        and American Ballet Theatre. In 2012, Emily received the Homer
+        Avila Award from Alonzo King LINES Ballet.
       p.
-        Emily has trained for 12 years in ballet, modern, jazz, tap, contact improvisation,
-        Gaga, and Countertechnique. She began her dance training in Rochester,
-        Minnesota at Allegro School of Dance and Minnesota Youth Ballet Academy.
-        Emily performed with Minneapolis’s Metropolitan Ballet, danced in
-        several projects at the Ritz Theater in Minneapolis, and founded
-        the Summer Choreography Workshop in Rochester. She attended the summer
-        intensives of Alonzo King LINES Ballet, the San Francisco Conservatory of Dance,
-        and American Ballet Theatre. In 2012, Emily received the Homer Avila Award
-        from Alonzo King LINES Ballet.
-      p.
-        Emily received her BFA in Dance Performance from the
+        Emily received her BFA in Dance from the
         <a target="_blank" href="http://theatreanddance.arts.usf.edu/content/go/dance/">University of South Florida</a>,
-        where she established herself as a dynamic performer, choreographer,
-        scholar, and leader. She performed in works by Ohad Naharin, Alonzo King,
-        Robert Moses, Katie Faulkner, Maurice Causey, Bliss Kohlmyer, Paula Nunez,
-        Andrew Carroll, Jeanne Travers, and Xiao Xiang Rong among others. In 2015,
-        she performed at the International Creative Dance Seminar at the Beijing
-        Dance Academy and travelled to France with USF’s Dance in Paris Program.
-        In 2014, Emily attended the American Dance Festival School where she worked
-        with choreographer Carl Flink and performed in his ADF-commissioned piece,
-        <em>Unkindness of Ravens</em>.
+        where she performed in works by Ohad Naharin, Alonzo King, Robert
+        Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, Andrew Carroll,
+        and Jeanne Travers among others. In 2014, Emily attended the
+        American Dance Festival School where she worked with
+        choreographer Carl Flink and performed in his ADF-commissioned piece,
+        <em>Unkindness of Ravens</em>. In 2015, she performed at the International
+        Creative Dance Seminar at the Beijing Dance Academy and travelled
+        to France with USF’s Dance in Paris Program. Upon her graduation
+        in 2016, Emily received the awards of USF Undergraduate Scholar,
+        King O’Neal Scholar, and Provost’s Scholar. She then relocated to San Francisco.
       p.
-        While in college, Emily served as the President of USF’s Student Dance
-        Production Board, worked on the TEDxUSF Affairs Team, and held various
-        other leadership positions in the USF community. Emily graduated summa
-        cum laude in May 2016 as a King O'Neal Scholar and a Provost's Scholar
-        with a BFA in Dance Performance and an Honors College Degree. Following
-        graduation, Emily moved to San Francisco to pursue her professional dance career.
+        Emily currently dances for
+        <a href="https://www.robertmoseskin.org/" target="_blank">Robert Moses’ KIN</a>,
+        <a href="https://www.postballet.org/" target="_blank">Post:Ballet</a>, and
+        <a href="http://mfdpsf.org/" target="_blank">Mark Foehringer Dance Project</a>
+        and recently performed Cunningham
+        repertory in <em>Signals from the West: Bay Area Artists In Conversation
+        with Merce Cunningham at 100</em>. Emily has also performed with The
+        Anata Project, Talli Jackson, Marika Brussel, Alma Esperanza
+        Cunningham, Kristin Damrow Company, Brannigan Dance Works,
+        and SOULSKIN Dance. Emily’s choreography has been presented
+        at numerous venues throughout the Bay Area, Georgia, and Florida.
+      p.
+        When she isn’t performing or choreographing, Emily teaches ballet
+        and contemporary to students ages 3 through 12 at the ODC School
+        and Steppin’ Out Dance Studio. She also enjoys working in the
+        numerous arts administration roles that she holds at ODC, FACT/SF,
+        MFDP, and Linda Bulgo’s Musical Productions.
 
       //- include:markdown-it ./bio.md
     include ../pug/_footer.pug
