--- a/bio/index.pug
+++ b/bio/index.pug
@@ -25,7 +25,7 @@ block content
         <a target="_blank" href="http://theatreanddance.arts.usf.edu/content/go/dance/">University of South Florida</a>,
         where she performed in works by Ohad Naharin, Alonzo King, Robert
         Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, Andrew Carroll,
-        and Jeanne Travers among others. In 2014, Emily attended the
+        Jeanne Travers, and Xiao Xiang Rong among others. In 2014, Emily attended the
         American Dance Festival School where she worked with
         choreographer Carl Flink and performed in his ADF-commissioned piece,
         <em>Unkindness of Ravens</em>. In 2015, she performed at the International
