--- a/bio/index.pug
+++ b/bio/index.pug
@@ -4,8 +4,8 @@ block title
   link(rel="stylesheet", href="../assets/css/index.css")
 block content
   .home-button
-    a(href="/" alt="Emily") E
-      img.flip(src="../assets/img/dancing/crop/1.png")
+    a(href="/" alt="Emily") 
+      img.flip(src="../assets/img/dancing/crop/1.png") 
   .body-container.bio
     .bio-container
       h1 Bio
