--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -16,7 +16,6 @@
   margin-left: -30%
   transform: none
   .bio-container
-    border: 10px solid white
     padding: 20px
     margin-bottom: 40px
 
@@ -40,12 +39,14 @@
       word-wrap: break-word
       color: white
       text-align: justify
-      opacity: 0
       margin: 0 0 10px
-      @for $i from 1 through 7
-        &:nth-child(#{$i})
-          +fade(300ms)
-          +delay(#{$i * 150}ms)
+
+      &:not(.no-animation)
+        opacity: 0
+        @for $i from 1 through 7
+          &:nth-child(#{$i})
+            +fade(300ms)
+            +delay(#{$i * 150}ms)
     a
       color: $accent
       font-weight: 700
@@ -55,6 +56,9 @@
 
 .statement-container p:last-of-type
   text-align: center
+
+.digital-art-container
+  text-align: left
 
 @media screen and (max-width: 500px)
   .body-container.bio
