--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -25,8 +25,7 @@
       font-weight: 100
       text-transform: uppercase
       color: white
-      margin: 0 auto
-      text-align: left
+      margin: 0 auto 32px
       padding: 5px 0px
 
     img
@@ -59,6 +58,10 @@
 
 .digital-art-container
   text-align: left
+
+  p
+    font-size: 16px
+    font-family: $font-mono
 
 @media screen and (max-width: 500px)
   .body-container.bio
