--- a/bio/index.pug
+++ b/bio/index.pug
@@ -10,7 +10,7 @@ block content
     .bio-container
       h1 Bio
       p.
-        <img src="../assets/img/headshot-2.jpg" height="200" alt="Emily Hansel"> Emily Hansel
+        <img src="../assets/img/headshot-2.jpg" height="150px" alt="Emily Hansel"> Emily Hansel
         is a San Francisco-based dancer and choreographer.
         <br />
         <br />
