--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -29,16 +29,18 @@
       padding: 5px 0px
 
     img
-      height: 150px
       float: left
       margin: 0px 15px 0px 0px
       border-radius: 4px
     p
+      font-size: 16px
+      line-height: 22px
       display: inline-block
       word-wrap: break-word
       color: white
       text-align: justify
-      margin: 0 0 10px
+      width: 100%
+      margin: 0 0 16px
 
       &:not(.no-animation)
         opacity: 0
@@ -52,6 +54,12 @@
 
       &:hover
         text-decoration: underline
+
+    ul
+      color: white
+      text-align: left
+      list-style: initial
+      margin: 0 0 16px 16px
 
 .statement-container p:last-of-type
   text-align: center
