--- a/bio/index.pug
+++ b/bio/index.pug
@@ -1,7 +1,7 @@
 extends ../pug/_main_template.pug
 block title
   title Emily Hansel | Bio
-  link(rel="stylesheet", href="../assets/css/index.css")
+  link(rel="stylesheet", href="../assets/css/index.css?v=1")
 block content
   .home-button
     a(href="/" alt="Emily") 
