--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -41,6 +41,7 @@
         text-align: center
       li
         list-style: none
+        padding-bottom: 8px
       ul
         margin: 0
 
@@ -85,6 +86,16 @@
       text-align: left
       list-style: initial
       margin: 0 0 16px 16px
+
+    .image-bar
+      display: flex
+      justify-content: space-between
+      gap: 16px
+      margin-bottom: 40px
+      img
+        box-sizing: border-box
+        width: calc(25% - 16px)
+        margin: 0
 
   .bio-container:not(.no-animation) p
     opacity: 0
