--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -71,15 +71,22 @@
       appearance: none
       cursor: pointer
       text-transform: uppercase
-      // color: white
-      background: white // $link-color
+      background: white
       border-radius: 4px
       border: none
       padding: 6px 8px
       font-size: 16px
       margin: 32px auto 32px
       &:hover
-        background: rgba(255, 255, 255, 0.9)
+        opacity: 0.8
+
+    .button-group
+      margin: 0
+      display: flex
+      margin-top: 16px
+      gap: 32px
+      button
+        margin: 0
 
     ul
       color: white
