--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -126,3 +126,10 @@
     left: 60%
     .bio-container p
       text-align: left
+
+  // TODO make all pages use this pattern
+  .body-container.bio.new-page
+    top: 0
+    left: 0
+    margin: 0 auto
+    width: 92vw
