--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -103,6 +103,7 @@
         box-sizing: border-box
         width: calc(25% - 16px)
         margin: 0
+        transition: transform 200ms ease-out
 
   .bio-container:not(.no-animation) p
     opacity: 0
