--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -43,7 +43,7 @@
         list-style: none
         padding-bottom: 8px
       ul
-        margin: 0
+        margin: 0 0 20px
 
     img
       float: left
