--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -99,11 +99,24 @@
       justify-content: space-between
       gap: 16px
       margin-bottom: 40px
+
       img
-        box-sizing: border-box
-        width: calc(25% - 16px)
+        width: 100%
         margin: 0
-        transition: transform 200ms ease-out
+        transition: transform 250ms ease-out
+        transform-origin: bottom center
+
+      .image-hover
+        width: calc(25% - 16px)
+
+        &:hover:nth-child(1) img, &:focus-within:nth-child(1) img
+          transform: translateY(-32px) rotate(-3deg)
+        &:hover:nth-child(2) img, &:focus-within:nth-child(2) img
+          transform: translateY(-32px) rotate(-2deg)
+        &:hover:nth-child(3) img, &:focus-within:nth-child(3) img
+          transform: translateY(-32px) rotate(2deg)
+        &:hover:nth-child(4) img, &:focus-within:nth-child(4) img
+          transform: translateY(-32px) rotate(3deg)
 
   .bio-container:not(.no-animation) p
     opacity: 0
@@ -121,6 +134,9 @@
   p
     font-size: 16px
     font-family: $font-mono
+
+.hero
+  min-height: 96px
 
 @media screen and (max-width: 500px)
   .body-container.bio
