--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -147,5 +147,8 @@
     left: 0
     margin: 0 auto
     width: 94vw
-    .bio-container p
-      text-align: left
+    .bio-container
+      p
+        text-align: left
+      .button-group
+        gap: 16px
