--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -49,6 +49,13 @@
       float: left
       margin: 0px 15px 0px 0px
       border-radius: 4px
+
+    img.img-profile
+      float: none
+      display: block
+      margin: 32px auto 20px
+      max-width: 100%
+
     p
       font-size: 16px
       font-weight: 300
@@ -59,6 +66,9 @@
       text-align: justify
       width: 100%
       margin: 0 0 16px
+
+    .text-center p
+      text-align: center
 
     a
       color: $accent
@@ -135,6 +145,11 @@
   p
     font-size: 16px
     font-family: $font-mono
+
+.program-container
+  padding: 32px 0
+  p, .heading
+    font-size: 18px !important
 
 .hero
   min-height: 96px
