--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -148,8 +148,21 @@
 
 .program-container
   padding: 32px 0
+
   p, .heading
     font-size: 18px !important
+    line-height: 26px !important
+
+  b
+    font-weight: 700
+
+  h3
+    font-size: 24px
+    font-weight: 300
+    margin-bottom: 16px
+
+  .thin
+    font-weight: 100
 
 .hero
   min-height: 96px
