--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -56,6 +56,9 @@
       margin: 32px auto 20px
       max-width: 100%
 
+    img.img-heading
+      margin-top: 48px
+
     p
       font-size: 16px
       font-weight: 300
