--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -51,6 +51,7 @@
       border-radius: 4px
 
     img.img-profile
+      width: 400px
       float: none
       display: block
       margin: 32px auto 20px
