--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -153,7 +153,7 @@
 .program-container
   padding: 32px 0
 
-  p, .heading
+  p, .heading, li
     font-size: 18px !important
     line-height: 26px !important
 
