--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -51,7 +51,7 @@
       border-radius: 4px
 
     img.img-profile
-      width: 400px
+      width: 100%
       float: none
       display: block
       margin: 32px auto 20px
