--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -108,6 +108,13 @@
       list-style: initial
       margin: 0 0 16px 16px
 
+    ul.dashed
+      margin-left: 0
+      list-style-type: none
+
+    ul.dashed > li:before
+      content: "- "
+
     .image-bar
       display: flex
       justify-content: space-between
@@ -156,6 +163,9 @@
   p, .heading, li
     font-size: 18px !important
     line-height: 26px !important
+
+  li
+    font-weight: 300
 
   b
     font-weight: 700
