--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -109,8 +109,11 @@
       margin: 0 0 16px 16px
 
     ul.dashed
-      margin-left: 0
+      margin-left: 10px
       list-style-type: none
+
+    ul.dashed > li
+      text-indent: -10px
 
     ul.dashed > li:before
       content: "- "
