--- a/sass/_bio.sass
+++ b/sass/_bio.sass
@@ -118,6 +118,22 @@
     ul.dashed > li:before
       content: "- "
 
+    figure
+      margin: 2.5rem 0
+
+    figcaption
+      font-style: italic
+      width: 100%
+      display: inline-block
+      padding: 8px 0
+      color: white
+      font-weight: 300
+      font-size: small
+      text-align: left
+
+    figcaption i
+      font-style: normal
+
     .image-bar
       display: flex
       justify-content: space-between
